--- a/estilo/style.css
+++ b/estilo/style.css
@@ -19,6 +19,11 @@
 */
 @media screen and (min-width:601px){
     body,html{
+        background-color: var(--cor4);
+        background: url(../images/pattern-background-desktop.svg);
+        background-repeat: no-repeat;
+        background-size: auto;
+
         display: block;
         width: 100vw;
         height: 98vh;
@@ -27,20 +32,142 @@
         display: flex;
         width: 100vw;
         height: 98vh;
+        align-items: center;
         justify-content: center;
-        margin: 0 auto;
    }
    section.box{
+    background-color:white;
     display: block;
-    width: 500px;
+    width: 400px;
     height: 600px;
-    border: 1px solid black;
     border-radius: 20px;
+    overflow: hidden;
+    box-shadow: 1px 3px 5px rgba(0, 0, 0, 0.301);
    }
+   h1{
+    font-family: var(--font1);
+    font-size: 21px;
+    font-weight: 900;
+    text-align: center;
+    color: hsl(223, 47%, 23%) ;
+    padding-bottom: 15px;
+    }
+    h2{
+    display: block;
+    font-family: var(--font1);
+    font-weight: 900;
+    font-size: 16px;
+    color: var(--cor5);
+    white-space: nowrap;
+    padding-top: 10px;
+    
+    }
+    p{
+    font-family: var(--font1);
+    font-size: 16px;
+    font-weight: 500;
+    color: var(--cor4);
+    text-align: center;
+
+    }
    .imagem{
-    display: none;
-   }
+    display: block;
+    width: 400px;
+    height: 175px;
+    overflow: hidden;
+    border-radius: 20px 20px 0px 0px;
+    margin-bottom: 30px;
+    }
+   .ilust{
+    width: 400px;
+    height: 175px;
+    }
    .anuncio{
-    display: none;
+    display: block;
+    width: 400px;
+    height: 375px;
    }
+   .titulo{
+    padding-top: 5px;
+    }
+    .text{
+        padding:0px 30px 40px 30px;
+        text-align: center;
+        line-height: 1.5;
+    }
+    .plano{
+        display: flex;
+        margin: 0 auto;
+        background-color: var(--cor3);
+        border-radius: 15px;
+        height: 80px;
+        width: 325px;
+        align-items: flex-start;
+        
+    }
+    .music{
+        display: block;
+        width: 60px;
+        height: 60px;
+        margin: 10px 10px;
+    }
+
+    .preco{
+        display: block;
+        align-self: flex-start;
+        padding-top: 40px;
+        top: 25%;
+        left: 5%;
+        transform: translate(-120%, -2.5%);
+    }
+    .trocar{
+        display: block;
+        font-family: var(--font1);
+        font-weight: 700;
+        font-size: 14px;
+        color: var(--cor2);
+        text-decoration: underline;
+        overflow: visible;
+        padding-top: 8px;
+        transform:translate(-25%, 100%);
+
+    }
+    .trocar:hover{
+        text-decoration: none;
+    }
+    .botao{
+        display: flex;
+        background-color: var(--cor2);
+        color: white;
+        font-family: var(--font1);
+        font-weight: 900;
+        font-size: 1em;
+        text-decoration: none;
+        box-shadow: 1px 1px 8px rgba(0, 0, 0, 0.308);
+
+        width: 325px;
+        height: 55px;
+        margin: 0 auto;
+        margin-top: 20px;
+        padding-top: 15px;
+        border-radius: 15px;
+        justify-content: center;
+    }
+    .botao:hover{
+        background-color: var(--cor4);
+    }
+    .cancel{
+
+        display: block;
+        text-decoration: none;
+        font-family: var(--font1);
+        font-size: 14px;
+        font-weight: 700;
+        text-align: center;
+        margin-top: 25px;
+        color: var(--cor4);
+    }
+    .cancel:hover{
+        text-decoration: underline;
+    }
 }
